(style): fix distorted buttons in calendar

--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -49,6 +49,8 @@ $calendar-day-text: $color-text-med;
       color: $calendar-active-text;
       height: 100%;
       width: 100%;
+      max-height: 30px;
+      max-width: 30px;
       line-height: 100%;
       border-radius: 50%;
       text-align: center;
